--- a/DotNetCore/MVC/ShopEase/Views/Product/ProductSearchResult.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Product/ProductSearchResult.cshtml
@@ -21,6 +21,7 @@
                     <td><b><a href="https://localhost:7150/Product/View/@productSearchResultVm.Id">@productSearchResultVm.ProductName</a></b></td>
                     <td><b>@productSearchResultVm.CategoryName</b></td>
                     <td><b>@productSearchResultVm.BrandName</b></td>
+                    @* <td><b><a href="https://localhost:7150/Product/GetByBrand/@productSearchResultVm.BrandId">@productSearchResultVm.BrandName</a></b></td> *@
                     <td><b>@productSearchResultVm.Price</b></td>
                     <td><b>@productSearchResultVm.ActualPrice</b></td>
                 </tr>
