--- a/DotNetCore/MVC/ShopEase/Views/Product/View.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Product/View.cshtml
@@ -20,7 +20,7 @@
             </tr>
             <tr>
                 <td><b>Brand Name:</b></td>
-                <td>@Model.BrandName</td>
+                <td><b><a href="https://localhost:7150/Product/ProductSearchResultByBrand?brandId=@Model.BrandId">@Model.BrandName</a></b></td>
             </tr>
             <tr>
                 <td><b>Price:</b></td>
