--- a/DotNetCore/MVC/ShopEase/Views/Product/Add.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Product/Add.cshtml
@@ -51,6 +51,12 @@
             </div>
             <br />
             <div class="form-group">
+                <label asp-for="Quantity" class="control-label"><b>Quantity</b></label>
+                <input asp-for="Quantity" class="form-control" />
+                <span asp-validation-for="Quantity" class="text-danger"></span>
+            </div>
+            <br />
+            <div class="form-group">
                 <input type="submit" value="Add" class="btn btn-primary" />
             </div>
         </form>
