Changed heading size and total count of records show on UI product search result

--- a/DotNetCore/MVC/ShopEase/Views/Account/Login.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Account/Login.cshtml
@@ -15,13 +15,13 @@
 
             <div class="form-group">
                 <label asp-for="Email" class="control-label"><b>Email</b></label>
-                <input asp-for="Email" class="form-control" value="shadrahmahni@gmail.com" />
+                <input asp-for="Email" class="form-control" value="salman08@gmail.com" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
                 <label asp-for="Password" class="control-label"><b>Password</b></label>
-                <input asp-for="Password" type="password" class="form-control" value="shadrahmahni123" name="Password" />
+                <input asp-for="Password" type="password" class="form-control" value="salman0002" name="Password" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <br />
