Changed Data in Address Table and insert multiple addresses of one customer and added User CardDetail

--- a/DotNetCore/MVC/ShopEase/Views/Customer/Edit.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Customer/Edit.cshtml
@@ -10,7 +10,7 @@
                 <input style="visibility:hidden;" type="text" id="id" name="id" value="@Model.Id"><br>
                 <tr>
                     <td colspan="2">
-                        <h3>Presnol Details</h3>
+                        <h4>Presnol Details</h4>
                     </td>
                 </tr>
                 <tr>
@@ -41,6 +41,7 @@
                         <h4>Address Details</h4>
                     </td>
                 </tr>
+                <br />
                 <tr>
                     <td><label for="AddressTypeId"><b>Address Type:</b></label></td>
                     <td>
@@ -50,11 +51,11 @@
                 </tr>
                 <tr>
                     <td><label for="AddressLine1"><b>Address Line1:</b></label></td>
-                    <td><textarea id="AddressLine1" name="AddressLine1">@Model.AddressLine1</textarea></td>
+                    <td><textarea id="AddressLine1" name="AddressLine1" style="width: 300px;">@Model.AddressLine1</textarea></td>
                 </tr>
                 <tr>
                     <td><label for="AddressLine2"><b>Address Line2:</b></label></td>
-                    <td><textarea id="AddressLine2" name="AddressLine2">@Model.AddressLine2</textarea></td>
+                    <td><textarea id="AddressLine2" name="AddressLine2" style="width: 300px;">@Model.AddressLine2</textarea></td>
                 </tr>
                 <tr>
                     <td><label for="PinCode"><b>Pin Code:</b></label></td>
