--- a/DotNetCore/MVC/ShopEase/Views/Order/OrderDetail.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Order/OrderDetail.cshtml
@@ -33,10 +33,10 @@
             <tr>
                 <td><b>Address:</b></td>
                 <td>
-                    @Model.AddressLine1 @("-")
-                    @Model.AddressLine2 @("-")
-                    @Model.PinCode @("-") @Model.CountryName
-                    @("-") @Model.AddressTypeName
+                    @Model.AddressLine1 <br />
+                    @Model.AddressLine2 <br />
+                    @Model.PinCode - @Model.CountryName <br />
+                    @Model.AddressTypeName
                 </td>
             </tr>
             <tr>
