--- a/DotNetCore/MVC/ShopEase/Views/Account/Login.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Account/Login.cshtml
@@ -15,13 +15,13 @@
 
             <div class="form-group">
                 <label asp-for="Email" class="control-label"><b>Email</b></label>
-                <input asp-for="Email" class="form-control" value="mdshabill8@gmail.com" />
+                <input asp-for="Email" class="form-control" value="nasira101@gmail.com" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
                 <label asp-for="Password" class="control-label"><b>Password</b></label>
-                <input asp-for="Password" type="password" class="form-control" value="shabill0123" name="Password" />
+                <input asp-for="Password" type="password" class="form-control" value="nasira123" name="Password" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <br />
