--- a/DotNetCore/MVC/ShopEase/Views/Product/Add.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Product/Add.cshtml
@@ -10,9 +10,9 @@
             <span class="text-danger"><b>@ViewBag.ErrorMessage</b></span>
 
             <div class="form-group">
-                <label asp-for="ProductName" class="control-label"><b>Product Name</b></label>
-                <input asp-for="ProductName" class="form-control" />
-                <span asp-validation-for="ProductName" class="text-danger"></span>
+                <label asp-for="Title" class="control-label"><b>Product Name</b></label>
+                <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
