--- a/DotNetCore/MVC/ShopEase/Views/Product/ProductSearch.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Product/ProductSearch.cshtml
@@ -18,9 +18,9 @@
             <br />
             <br />
             <div class="form-group">
-                <label class="control-label"><b>Product Name</b></label>
-                <input type="Text" id="ProductName" name="ProductName" class="form-control" />
-                <span asp-validation-for="ProductName" class="text-danger"></span>
+                <label class="control-label"><b>Title</b></label>
+                <input type="Text" id="Title" name="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
@@ -35,7 +35,7 @@
                             <b>Min Price</b> <input type="Text" id="Min" name="Min" class="form-control" />
                         </td>
                         <td>
-                            <b>Max Price</b> <input type="Text" id="Max" name="Max" class="form-control" />
+                            <b>Max Price</b> <input type="Text" id="Max" name="Max" value="1000000" class="form-control" />
                         </td>
                     </tr>
                 </table>
